name:               mathiassm
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    MathiasSM.CleanURL
                  , MathiasSM.Compile
                  , MathiasSM.Context
                  , MathiasSM.Metadata
                  , MathiasSM.Rules.Assets
                  , MathiasSM.Rules.Assets.Favicon
                  , MathiasSM.Rules.PostGroup
                  , MathiasSM.Rules.Redirects
                  , MathiasSM.Rules.Showcase
                  , MathiasSM.Rules.SinglePages
                  , MathiasSM.Rules.Sitemap
  build-depends:    base == 4.*
                  , filepath == 1.4.*
                  , hakyll == 4.15.*
                  , pandoc == 2.14.*
                  , tagsoup == 0.14.*
                  , process
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
