cabal-version:      3.8

name:               mathiassm
version:            0.2.0
build-type:         Simple

license-file:       LICENSE.txt
author:             Mathias San Miguel
maintainer:         mathiassanmiguel@gmail.com
homepage:           https://mathiassm.com

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    MathiasSM.CleanURL
                  , MathiasSM.Compile
                  , MathiasSM.Context
                  , MathiasSM.Metadata
                  , MathiasSM.Rules.Assets
                  , MathiasSM.Rules.Assets.Favicon
                  , MathiasSM.Rules.PostGroup
                  , MathiasSM.Rules.Redirects
                  , MathiasSM.Rules.Showcase
                  , MathiasSM.Rules.SinglePages
                  , MathiasSM.Rules.Sitemap
  build-depends:    base == 4.*
                  , filepath == 1.4.*
                  , hakyll == 4.16.*
                  , pandoc == 3.1.*
                  , tagsoup == 0.14.*
                  , process == 1.6.*
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
